<resources>
    <string name="app_name">CleanTheStreet</string>
    <string name="btn_take_image">Add image</string>
    <string name="btn_save">Save</string>
    <string name="btn_accept_task">Accept task</string>
    <string name="btn_done_task">Done</string>
    <string name="btn_abandon_task">Abandon task</string>
    <string name="btn_add_completed_image">Add completed image</string>
    <string name="btn_approve_task">Accept</string>
    <string name="btn_disapprove_task">Deny</string>
    <string name="et_description_hint">Enter description</string>
    <string name="dlg_choose_image_source">Choose image source</string>
    <string name="dlg_option_gallery">Gallery</string>
    <string name="dlg_option_camera">Camera</string>
    <string name="tv_view_task_distance">Distance</string>
    <string name="tv_task_creator">Creator</string>
    <string name="tv_task_score_text">Upvotes:</string>
    <string name="tv_task_score_value">0</string>
    <string name="image_test">iVBORw0KGgoAAAANSUhEUgAAAPwAAACjCAYAAACuc3NFAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAABzQSURBVHhe7Z0HeBTV2scj7QokQAgkEEpooYUSSiAgQVpCFaSEDoEQSgKBmNAJgrSE4gOCiKiXq6DRD+WzXQQVbChGBdQrUvwQFQELEaki6vX/zZmd2ZyZPbM7yW7K7ry/5/k/2T0z55x3Z85/3pnJ7hm/ny5dxo8//4IffsrD+Qs/4uy33+PEqa/wydFPQRCE73DlyhWQ4QnCIpDhCcJCkOEJwkKQ4QnCQpDhCcJCkOEJwkKQ4QnCQljP8HlHsOvhJ7DJrj04nKcsMwOrn3MEl5S3HkGJae9XynuJS7l7pNgO4rTyXojDZ9G2IcRj8f+CwzlKn7kFbFMUQ4HiOoO9nt4HFsGahucHy1cHscndweoucpt7sGvfGaWAmUl6n2PC8JpYJCO4OoB5Kn6+nYK2KVq/IG146jNYEDI8996WVZVsqZpPXn5QyiisXDKgfn1lPb7urtxf5DJtXzYTy2Y0aPOwlClt60rG3Se95w3P1lFjUzO/pn0Gl/mc9m0rz48/P1tr4mewA6Lar/2AxA4s6vqCbcItO2y4TXUxCOOScOifi1XQp2bb75O2saYuQYZXM7ymnA1ozlR81lTXk+ppBpe6Pp9lNW3qTCdo83SuZBBWJrd9hjM816aExiTqgNYPbGd96+Nn28BuCN1nt7cBnN7HXTLwy+yvuboScpxcffZe7lMUg7My27v8/vV9G217TXl+XFaGruH1xtOX84OLYV+HG0AawxgMTIMsK6O+l9ph9S7JxmfrK33o11dxKNcNeKO+9fHbyyTxmZB9LrVckdCMmr5YDNo6GmkOVKIYdNuVrytJc8BQ1ynItrc4lOFV5MGlDjYj40go70+r2YphatC5blPOkPZT+cIY3nzfmvhV2DLFWHIbus+lgW9ffS3X54xlVF8Ug6jMRX25b1PbngyvQoZX4QcOe23GnPw6RgcLtVx+7apNaWDukwa8HAdneL5NBouPra9vR16P789Z3/ltaq6ZJZhp7JnU3i+LRzETg+9bfa0xn219PmNr2tXFYFgm6l/ft9G2V9eR66rtWBsyvB02WJRTR+Vmj2OmkODfq8aTXvI3juymkGCDXC6XzLvX1Sm99NJ+nasxvARbR2nfbiJNmU0F6puL376uvD4Xm3zwU8q5g4KmHftr1eQ2sVj47WKvL4rBIC5x/8q+UtYRbnu+PTK8HesZniAsDBmeICwEGZ4gLAQZniAsBBmeICyEpQz/999/44/bt3Hzxg3cuH4d165exVVpA3hSrE3W9s2bN3H799/lPgmitGAJwzPT3bp1q0gMbkas7//+979KNARRcvi84f/8888SM7pef/7xhxIVQZQMPm14dkpdWsyuil1SEERJ4bOGL02ZXS/K9ERJ4ZOGZ9fspdXsTCw2uqYnSgKfNPzv0qm8yGilSb/99psSLUEUHz5n+NKe3XlRlieKG58zPLtRJzKXRidykDJkJAYqyjpoctmVt5ClLkvNwQl7Oa+T2JmqrycWi5UgihOfMzz7wovIXPlipk3HzhPKe9ng6ntny7RGPrErHQOz37Ktx0kudzhQiMViJYjixOcMz77lJjKXXQcfdDDqgWzFoM6WyQeDB3FAXSYfDLj3alnqg8gymeHZpQdBFCc+Z/jr164JzWUsXVY3WiabmT+N19djZwDsvflTejI8Udz4nOFFxjKWzZwpu066XsayvxPDs1N527rmDc9EEMWJhQ3PDGtkdsEyZxles8y84dnZCEEUJ9Y0vHz9bWBKw2XM4OJrePVGnV7ig0m+2K/2CKI4sZ7hC2V2Ju0pvtFd+oJkePYFIYIoTixneKNszAzqbJmtvu1UXy73wP/h6Ys3RHFj8Zt2JSf6HzxREpDhS0Ds33F//fWXEjFBFB9k+BIQ/SaeKCnI8MUsNt0VQZQUZPhiEjuNp8xOlDQ+Z/iCf7W26MX+307X7ERpwOcMz6a2KknTs0zO+mcmZ/9nJ6MTpQmfMzxBEMb4nOFZRnX5E1mSRuyshB6eYQ18zvDsVFo0qEkFEz08wzfxOcOLBi+p8KIptX0LMjzJpejfib4DGZ5kSpTpfQMyPMmU2I09uqb3fsjwJNOih2d4P2R4UoFEWd67sZ7huampTJXr5XQ9g8kv+Dpm+ym0zE/AURjRwzO8GzK8q3K93DV8katoDU8Td3g3ZHjDcm46K77c2XpGD6Hg67isz891bxCDg5zF4ORzpOZgZ7a6zNxBgt28I7wXMrxBOXvijH3WWX5OelfriYzD13FZP9/w/DLjSTOdx2DYhhyHrp7hPH35IsN7NxY1fH5W00o1IsuK+aa0vefmoDdcr6DX8KL6quG5PoXrGpXzMThpQxOH4L0TEd4LZXhRucM6nBGdrmfLqKYNz15rsqre8PoDEm9eRU5jcNKGvp6gHSMR3gsZXliuz5pcpnS6nqczPL/MSM5icNKGfjvo3xuInpbj3ZDhDcodrotL+Bre2TW2sxjMfg6H9waip+V4N2R4w3KWHdXTYGfGsGVUeT1379Jn53AZXrdMdDpvl7MYDNrQx+EQl1j0tBzvxnqGL80yabqSFH3Tzrtx2/B//XUbX3z+PnY8ug4De3ZC906tMXhQHLr3vhtRsX0QNWgAIvvFom6bFujUIxq1Q6uiVs0AhIaGoGoVfzRvUhdRrcIQ2bg6ekTWw+iB0cjKTMGc6SPxwq5t+Pv2Jfxx9Rzyvj2OK3k/KL0aIxqkpVdcZnaZxUte9KUb78dtw9+4+SM+PXIQ2zY9gIG9O6NLu2YY1L8X4gb1RbX6deEvqUnH9qhSNwS1G9VC5UrlUc7PD+XLl0FwcHVEtmqE6MgG6NQyBF1bhWDS8Bg8unkpVi2diVdfeAK3r53D75fP4ofTufj80CtKr8aIBirJfbH/v9OEnN6P24a/eOEL/HjhOLZvXonBcV3QrkUY2kc2R6t2LVE+sDL8KlWAn2Tw2g1CMWhIH1SvUhn/kN5XrFgBtWoFShk+GN2iGqJXdAP06FgHD65IxtlT7+DD9/fg9Mn38eft87hx+f/wzYl3cWj/U0qvxogGK8l90SQYvoHbhj965HUc3P8scp7chIRRA1C90h3yaXqTpmGoLyksohFqN6mDth1bokdMO9T0r4CGIVXgX7kcAgLKIKJZMMYOuwujB7XH4N5Nkfv2U/jt2gl8f+5DXPr5C9z67Rtc/fUkzpw8iEMHdyq9GiMarCT3RE/L8R3cNvwHh17Em68/jYc3Lse4+H5o0SgETcKCEVTDH43C6yK4dlXUDauOiOZ10bR+EGrd6YdOTaXy6hUR3qgmotvVQ0y72uh/V32MHdwWuW/twMXv3sOZr97E99/n4vLlL3D16nGcOf0GPv7wOaVXY0QDllQ4sdN4yuy+hduGn5kajy+Pv43nntmKoYPuRvvWjRFQ8Q7UDKokXa/7IbBqGVSq4IcGtSqjZWgAoqQDwtYVC5A6ZSQim4eiS5tQdI2ojq7NK2JUXFOcyH0O1y59jAvnDiHv0qfSoDuBmzdO4sTxvfj4g2eVXo0pjU+e8UbR03J8E7cNXzXQD6PHxuGJf25E8owJiOnaAa2aN0Kd4ADUDfFHDf8yqF+jrJzZq5TxQ7/2LfDKjoexeNZkxLRpgDb1/FFPOkCMuLspsuYNx4E9G/Dr+cO4+K1k+B+P4qZk+D9+O40T/9mLo7m7lV6NKeknz3ijWCanp+VYA7cNXzOkLMKbh2DMuMFYvmIR9u17FfHDB6NKpbIIrV4eQZKZw4OrIHlUHHq0aoiGlcrgsdXLMGf8CDSsfidi2zXEylnxeGnrIty6fAyvP7cer+zMQt65j3DpwjH8duU0bknX8Cc/ew0fv+c6wxMEYYzbhq9dtxLatGuEgUPisGrdGhx89x3UDq0t35kPDrgD5aW/93bviOvffYap9/ZB8B1+GH53DKbH34sKZcugT5twHNv7JDYvSMCnrz2O159Zhzd2b8b5U+/j9+vf4s9b53H54uc4d+IQPnnreaVXY+jJM74vdkZCT8opHG4bvmKAH0Ib1EDfIQOQvjgTO3e/iG5390anqPYY0Dsafbs0w8Jpw/HyvzZhypBY+EsHAKZmIcGoW6k8YlqEYffmlcgYE4cda9Lw04m3gMtncPWHk7j5yze4dfV73Mj7GnnffYF/P7td6dUYevKMNUVPyjGH24b3l07bK1WvjNghQzAycQZS5i/DkpXrsCQzE9seysKjGzLx+LpFeOXJzYhp3RyB/7gTYUHBCAsOka7py6BXh9bYtnIhNiyYgZwtK/D67kdx+MAefHP6GM59fRw/fP8Vfv35HL776jO8+jz9H57kXDR/vnPcNny14KooF1AZ4ZGdMHTSTAwcOx0ZS9dgVfZ6ZK/KxMoFKdj92DrMSRiG4Er/QOWy5RBUNQg1AmuiUoXyaB3eAMkTRiBzdiL++dAKRLdpgEVzk3H0k/eRm3sIhw8fwulTx/Hd2dOS8c8rvRojGgQka4n+lWiM24avEhyIaqGhqBvRDqNTFmBY0lxMmrUYK7I3YPsjm5B1fxq2rJqLxOF90axOMEICa6BmjboICAyBf9VABAVVRb8+3dC/V2cM6d8N0VEtkDB5NF54+Xn8796X8eZ77yL3yCd457138Nnnx5RejRENAJL1RJlejNuGb9K2LTr3ikXf+ATJ8AsxMnkhZi1ZgwfWPogdjz6M3DdexpObVuM16XQ8a/kShNUJQ9mylRFQPRhlypRD7Tr10FG63h8ybADu6t4eraUMPzN5ErY/tgX/ytmFF/bvw+7XXkPOC8/jjTcPKL0aI9r5JOuJ3dija3pH3DZ8q5g4xA6bgFGT0jByagYS0jMxZ0UWMlevwoPL78fcCWOxa+N6HD9yGBlz01E7tD78/WugSpVqKF+uIlo0iUTP2MHo1j8OTSIbot/ATnhswxI8vnE1nnnuaWzNycEzBw7igyOf4asvzyi9GiPa+SRrip6U44jbhu/QLx59R03H6IR0xCelY8zs+Uicvwhz5s9F9oIFGBLVEWvSUnFg70u4b34G/AMCUblSFQQFVpH/dVerWj10vbs/OvbqjTot6iC2X0c8vz0bB/fswhM7nsDW3Xvw9Lsf4MAHx/DRex44pZd/c87/JNUmh0krjOTx36zz01oVVvy0Vh4Q/xmNXjuVh+NxQ5Tltbht+E6DxsmGj594H+KnzcWYOQuRMHc+kiWTb1iyBCO7RiOuTUvMSRqPmJhOKFeurGz0imUkSa9DqgWja7c+iBs6VLo8CEd4eDBWpM/Aizt3YNX6TZi3YQtmrNmE2YtXY+GCFUqvxoh2ukbCQWubFcbUALWa4c2UO6j0GJ6elKPFbcP3nTAH906Zi3FTF2PczEyMTV+C8elzkTBjGhZOS8KMAXFoWOEOtKwbiJqBFRAeFoqIhnXRqnFNxHaJRFREW0R1jEbv/oMQ2bE1mjUORfaiedi4eh3mP/Agpj+wEdOyt2LO8g2Yv2SN0qsxop2ukbPBrJkzTjTFlaiMl8FyuW3b1FOO9XjD24ySP3eds/64ZR59+ISuLr+9jLadLJPxyMuUzyvcLu7E7iiatEOL+6f0gyYgZugUDBozG8OnzcMYyfAJCxZjRoZ0it+rB+I7t0dMWDCaBlVA49AqiG4VjlF9u+Penm1wX1I8hvXrjah27dGsRQRaNA/HPXG9sCVrLTLmLEba/ZsxMfMhJK/fgflrH8WSNQ8pvRoj2ukaGQ5aNtDyMy0/+aPjAxzEg955HaMBmm94zYSTkgwnoBQt49p3FYdRm3bxn9HotU7m4tFlfsF2cTt2ndjNOyIftw0/bPYDGJO2ClMz1mLqovWYcn82kpevwvzlyzAwuhN6hNVBfFQE2tSqjOb1AhAeXFEqj0DPtiFIHhuLe3p1RbeoDoho2gwRjRthSFwfjB86GpMm34fkzG1IWPYYJq3YjtSVW3D/hm1Kr8aIdrpGhoOWz7Ra89veuxr0hanDZOs3RTKCfTDL4urb3/Px8ct4IxUgDqO4+HKj1xq5ikdZJptU+qyG7Xkgdp3I8FrcNnxs4jwMTFyA4YmLMHjKPMQlzcaApOkYmzQF/Tp3Rre6IYhtEoqWNSogrPodaB8WhH4dwtGzdU1MHdEdXdo2kU7rm6FH507o0qolOkuZfsqYKVj6wFYkLXoEyVnPYNaGp5GetQ1L129VejWG7WDRjrfL6aDlDZV/6miTssxp/YLWYbKZI2VXjnRqy2UshzrcAUnQHsuM+QYzGYdRXHy50WtegnJ7PPZlqnmdfQ4PxC4QkY/bhu81IQ39J2Zg6CTJ9MmLMSxtCUanL0Ri6hx0atoUUSGBaFu1PLo3qyUZvhxahASge/NQDI+RTN62DkYP7oW72kWgWWgI+rRrixjJ8DOTUjErYw2mShl+wqKtSMzcgrSVG7Fi42alV2Nc/nDGaKBoThHVwalbh8lwoBWmDlO+AdgpbH6W17fH3iuD32GZQUbVy6xp+HKj1xq5jidLc0ByZnhR+5L06xrGohU9OEOL24YfP28tEuauRVJ6NibOW41R8x7AqLmLMGl2GiYNG4YBrVsiqlY1dG4cjL7dWiEqvDa6NKmFwV2aoU9UOOLv7YP+PTpjSPdoLJk8HqN6dMf4kWMwevIcxE1cgNFp6zAkcT4SZqbhoe2PKL0aw27SiHa8XcKBwgaaOiBtcrgmVQ8GTgZaYepoMrfmtZP2RMu4+E3HYRQXX270WifjeGzmV5fJ1+VOtovbsetED87Q4rbh70maJxlyLoYlzMWASfeh16RZ6DlxCgaMnYjkhMkY1qUrouvVRruGwZg+aTh6d26LbhFNcG9MB/TuFIHePaORNHEERsV2Q1JcDFKHDkDKlATMSF+ElGWbED99CVIyVmDztq146eUcpVdj2PeoRTveLnmg6E8btWa3yXYQsC3PN6E6gB3vmjMZ1HE6OLUm167Lt6evr8YhyeldeidxGMbFfUZ+HZefQxAPq2O/E+8iHlnuxq4VPThDi9uG7z9xJu6ZmIqh49MweHIG+k/LwIAZaYifNgupSSmY0G8AOjaoh/bhDTB96jjExnRGx6ZNMEXK/j2jo5GQOBEzpyVgvGT259cuxbZFM5GRmojkeRlYumk71m59Cvv2v43/HDuM48f2K70aw34bLdrxJGuKvnijxW3Dj565AONSFmLSjEyMSb0fI9KXYeS8pUiQMvSc5DSMjh2ApkHB6NohEskpSRg7cji6d+yMHu264a6OMZg4dSrm3TcTCf1i8MSCqfj3w/cje+VsZErm7z9mHF5+7U3knf8eP505gu+O71N6dQ77SqVo55OsJfofvCNuGz5tmXTtLpl+4vRFGCVpsPT6nlnzMTLlPkydnII+HbqhTkA1tG7RDD3jeqNN20gEBdRA/aDG8PevhZi4AUielojlyePxyvp52J01C6/s2YSnXtiO2BFDsGPHP5G7/1W88ewmvP3iw0qvzqEsT2L/raG5+Rxx2/Cff3kSCSnz0H/oZPQcmogu8YmIHiW9HjkBQwePRpeIDmjbsBkiW7dGSynLV60WhDv8yiPwzjrw86uM6vUbY/A9/TCkSwQSuzbGh0+vxsbsZIyY2B/JC2fjse2P4Il1K/DC49k4++WHSq+uYZNZigYCyRqi38SLcdvwpRn2PWrRYCD5tujBGcb4tOEZlOmtI3YaT5ndOT5veAa7U0s38nxb9OAMc1jC8CrsZh47zWeDgx5W4b1imZwenFE4LGV4grA6ZHiCsBBkeIKwEGR4grAQZHiCsBBkeIKwEGR4grAQZHiCsBBkeIKwEGR4grAQZHiCKCb++uN3/Hr2OL55639wZv9OnNyzBcef2yAUW8bW+e7QS8g7fVSu6wnI8ARRxDCz/nDsLacGNyPWxh833JtnnwxPEEXIjZ/OuW10va6d/z+l9YJDhieIIoKdinva7KrYpUFhIMMTRBFQFJldr8JkejI8QXgYds1e1GZnYn0U9JqeDE8QHubnLw4LDVoUOv+RuanbVcjwBOFBiiu78ypIlj969CgZniA8BbtRJzKlU71xBKKpN69/JFhXINanWcjwBOFB2BdlRKZ0KtnwZ3FBU74f16X2zJie9WkWMjxBeBD27TiRKVVduAjcPrVLfv31qcvAxf0GhpfEyq8dwdf6cp3YJYRZyPAE4UFOv/qY0JT5YpmbmVv9K5UZGV5e5zLy3tCXa0WGJ4gSwswNOzmzS6iZ3tjwu5B3zbXhmcxChicID+LqlF6WbHDOyG5meCazkOEJwoOYuWnHruOvXzxru35nZUaG/0hax8Q1PJNZyPAE4UHYd9xFhrSLmVs2MXe6LjS8+bv0TGYhwxOEB2FfvBEZ0iZmcs7EagaXDe+IWbMzmYUMTxAehn3dVWTKopRZyPAE4WGcZ/mikVnI8ARRBLCfx4qMWVQyCxmeIIqIQn2vvpAyCxmeIIqQ4sr0ZiHDE0QRw36+WpQ38tiXfcxChieIYoLdzGOn+WyaatffuTcn1lZB5rcjwxOEhaAZb3wIlkHMPuiA5Bti+5rdJzALGd4HYEb3xIMOSN4pdnlgFjK8l1Mc0yGTSr/MQob3YoryQQck75JZyPBeCmV2Ei+zkOG9EHbNTmYn8TILGd4LKc4HHZS42E9ITc76YmWZhQzvZVgtu184xSaL2I88df43klBmIcN7GeZ+kGGbLSUfbjYVg8kW7BMq2uvrsqpaT52WSRGbrknTvizbRA9CnEz44NiOJFGGNzNhhGEf/Cwzgkkm5HJBHGb6lKROUKmSv1zZJqLtZy9zst9cyCxkeC/D9ZxpjlMjyYNQnRtNOKB1BpdMxuZc0xwE5HqXcfui0o5a75pU5mxgivozMJUmTlWGsYg+A/e5DfqwS17OMBebsFwuy99ujvHbYtLOTsttZ02bLvabC5mFDO9luJwVVThgOUMLl/NTL6lzrTEzc4NNqXf9onbAymZ0aI+TqD9hDKJy57EI66vrGa2jSl3OziD4rOusbYdyNT72mm1j1/X4jM4/lELcPrffNOWOMgsZ3stw/aML5dTRKDOIBpZcpgws9lqpK8+uqs+YLOMqZV+fOou8j0QDlZNhf451HDKaq1jU9exydWDjxC031baonJWp8bIDh3Cb8wdTJiVGtt0067vYby5kFjK8lyHa2UKxAWiHyxLywHUk38TSKbqadfjspw549lcuYwNUeW/SWNoyAbrB7jIWbl2buIzrqg9NG9wZhFHbrtrj49NJc0CRJB/YJPgyu4z2mwuZhQzvZRTqDr08WM1kPiXLaFDWtdeT1pGv4yWTsAHutD1JouX6MnmQ6we3mVj49ZkKl+HZe/vBxaiesNwWo2xcQ8Nz66hlrmJTJa9nzvRmIcN7GS6v4Q0Gnj3LOBtsbJkuy4rqXWDX8dLpvFODqBItF5TZsh5XZjIWdZks9tldZWpVDsuZMaXPZXSJYtBefvZmBxuT9URlrvabrpwX/XjGhynMXXqzmY+ZzmFwqQORr8fKCplJDcvUjK4MetOx2KX73IWOiyGoZ9hnfgZ2OGgpMdkvS1SZid9elt++kdhPZM1ChvcyXD7ZRJZt8OTDDRpDIzDDicqVQcdnPr4Nw/YUiZYb1ZHLmUH2m4jFEY1ZlLZEyOsZxOBoWkUG7QkPShwOy5mMPr+z/eZE7JuXZiHDexnsm3ainU6yrticeWYhw3shJfFkE1LpFLvEKwhkeC+EsjyJif3H5tavPymjwhxkeC+luJ9sQip9KshstSpkeC+mOJ9sQipdYnMYFgYyvJdDmd5aYqfxhcnsKmR4H6Con2xCKh1i/28v6DW7HjK8D8Fu5nn6ySakkhHL5Gwfsn3J/s/urtFVyPAEYSHI8ARhIcjwBGEhyPAEYSHI8ARhIcjwBGEhyPAEYSGuXLmC/weZJfnKtMg+aAAAAABJRU5ErkJggg==</string>
    <string name="title_activity_view_my_tasks">ViewMyTasks</string>
    <string name="title_activity_create_task">CreateTask</string>
    <string name="title_activity_view_tasks">ViewTasks</string>
    <string name="title_activity_view_task">ViewTask</string>
    <string name="title_activity_complete_task">CompleteTask</string>
    <string name="title_activity_approve_completed_task">ApproveCompletedTask</string>
</resources>
