<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.sdu.lahan14.cleanthestreet.Activities.ViewTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_complete_task_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/tv_task_creator" />

        <TextView
            android:id="@+id/tv_complete_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/tv_task_score_text" />

                <TextView
                    android:id="@+id/tv_complete_task_score_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/tv_task_score_value" />
            </TableRow>
        </TableLayout>

        <fragment
            android:id="@+id/f_complete_task_map"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <ImageView
            android:id="@+id/iv_complete_task_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/iv_completed_task_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btn_add_completed_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_completed_image"
            android:onClick="onAddPicture" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>

                <Button
                    android:id="@+id/btn_done_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onDoneTask"
                    android:text="@string/btn_done_task" />

                <Button
                    android:id="@+id/btn_abandon_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onAbandonTask"
                    android:text="@string/btn_abandon_task" />

            </TableRow>
        </TableLayout>


    </LinearLayout>

</ScrollView>
