<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.sdu.lahan14.cleanthestreet.Activities.ApproveCompletedTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_approve_task_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/tv_task_creator" />

        <TextView
            android:id="@+id/tv_approve_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/tv_task_score_text" />

                <TextView
                    android:id="@+id/tv_approve_task_score_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/tv_task_score_value" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <ImageView
                android:id="@+id/iv_approve_task_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/iv_approve_completed_task_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </TableLayout>

        <fragment
            android:id="@+id/f_approve_task_map"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">
            <TableRow>

                <Button
                    android:id="@+id/btn_approve_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onApproveTask"
                    android:text="@string/btn_approve_task" />

                <Button
                    android:id="@+id/btn_disapprove_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onDisapproveTask"
                    android:text="@string/btn_disapprove_task" />

            </TableRow>
        </TableLayout>


    </LinearLayout>

</ScrollView>
