<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="dk.sdu.lahan14.cleanthestreet.CreateTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/iv_task_image"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/bt_take_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddPicture"
            android:text="@string/btn_take_image" />

        <fragment
            android:id="@+id/f_map"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="500px" />

        <EditText
            android:id="@+id/et_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_description_hint" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSave"
            android:text="@string/btn_save" />

    </LinearLayout>

</ScrollView>
