<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.sdu.lahan14.cleanthestreet.ViewTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_task_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/tv_task_creator" />

        <ImageView
            android:id="@+id/iv_view_task_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tv_view_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RatingBar
            android:id="@+id/rb_view_task_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isIndicator="true" />

        <!-- TODO: replace with image button -->
        <Button
            android:id="@+id/btn_view_task_upvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Upvote"
            android:onClick="onUpvote" />

        <fragment
            android:id="@+id/f_view_task_map"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:id="@+id/tv_view_task_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_view_task_distance"/>

        <Button
            android:id="@+id/btn_accept_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAcceptTask"
            android:text="@string/btn_accept_task"
            android:clickable="true" />

    </LinearLayout>

</ScrollView>
